# devenv

./: .travis.yml  LICENSE  Makefile  README.rst  pyproject.toml
devenv/arguments/: arguments.py
devenv/dockerfile/: __init__.py  commands.py
docs/: conf.py  index.rst
tests/: test_devenv.py
tests/dockerfile/: test_commands.py
tests/test_dockerfile/: test_commands.py
