[tool.poetry]
name = "DevEnv"
version = "0.1.0"
description = "Development Environment generator similar to Pipenv, NVM or asdf but using Docker containers"
authors = ["Owen McGill <mcgillowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytoml = "^0.1.19"

[tool.poetry.dev-dependencies]
sphinx = "^1.8"
black = "^18.3-alpha.0"
mypy = "^0.641.0"
pylint = "^2.1"
pydocstyle = "^3.0"
pytest = "^3.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
